Upstream fix canonical/canonical.com#976
Resolves issues with errant horizontal scrolls bars introduced by
margin-left and width calculations on .p-logo_section__items.

--- a/scss/_patterns_logo-section.scss
+++ b/scss/_patterns_logo-section.scss
@@ -107,19 +107,8 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: $spv--x-large;
-    // negates the margin of logos that sit in the first column
-    margin-left: -#{$margin-small};
-    width: calc(100% + $margin-small);
-
-    @media (min-width: $threshold-4-6-col) {
-      margin-left: -$margin-medium;
-      width: calc(100% + $margin-medium);
-    }
-
-    @media (min-width: $threshold-6-12-col) {
-      margin-left: -$margin-large;
-      width: calc(100% + $margin-large);
-    }
+    margin-left: 0;
+    width: 100%;
   }
 
   .p-logo-section__item {
